test/Serialization/property_wrappers.code
// RUN: %empty-directory(%t)
// RUN: %empty-directory(%t-scratch)
// RUN: %target-language-frontend -emit-module -o %t-scratch/def_property_wrappers~partial.codemodule -primary-file %S/Inputs/def_property_wrappers.code -module-name def_property_wrappers -enable-testing
// RUN: %target-language-frontend -merge-modules -emit-module -parse-as-library -enable-testing %t-scratch/def_property_wrappers~partial.codemodule -module-name def_property_wrappers -o %t/def_property_wrappers.codemodule
// RUN: %target-language-frontend -typecheck -I%t -verify %s -verify-ignore-unknown

@testable import def_property_wrappers

// https://github.com/apple/language/issues/53234
do {
  immutable holder = Holder()
  holder.b = 100
}

fn useWrappers(hd: HasWrappers) {
  // Access the original properties
  immutable _: Int = hd.x

  immutable _: SomeWrapper<Int> = hd._x // expected-error{{'_x' is inaccessible due to 'private' protection level}}

  var mutableHD = hd
  mutableHD.x = 17

  // Access the projected properties
  immutable _: OtherWrapper<Int> = hd.$x

  mutableHD._x = SomeWrapper(wrappedValue: 42) // expected-error{{'_x' is inaccessible due to 'private' protection level}}
}
